update deprecated URL code in spigot version checker